--- a/deployment.yaml
+++ b/deployment.yaml
@@ -154,3 +154,42 @@ spec:
    #nodePort: 30002
   selector:
     app: kubern8s
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: shanvi-ingress
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: kmaster.example.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: home-svc
+            port:
+              number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: jenkins-svc
+            port:
+              number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: docker-svc
+            port:
+              number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: kubern8s-svc
+            port:
+              number: 80       
